log
Wed, Apr 16, 2025  2:45:59 PM: 
 hashmap.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:63:12: error: 'HashMap {aka struct HashMap}' has no member named 'bucket'; did you mean 'buckets'?
         map->bucket[i] = NULL ;
            ^~
eeef3b7
Wed, Apr 16, 2025  2:46:17 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
83eab60
Wed, Apr 16, 2025  2:49:49 PM: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
48d053a
Sat, Apr 19, 2025  5:04:45 PM: 
 hashmap.c | 20 ++++++++++++++++++++
 1 file changed, 20 insertions(+)
 tests:  2|5
total_score: 20/70
0f67ea1
Sat, Apr 19, 2025  5:05:22 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
9d251be
Sat, Apr 19, 2025  5:09:51 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
82dcf0e
Sat, Apr 19, 2025  5:23:14 PM: 
 hashmap.c | 9 +++++++++
 1 file changed, 9 insertions(+)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'eraseMap':
hashmap.c:92:38: error: 'pos' undeclared (first use in this function)
     Pair* hashElement = map->buckets[pos] ;
                                      ^~~
hashmap.c:92:38: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:90:10: error: unused variable 'posOriginal' [-Werror=unused-variable]
     long posOriginal = posicion ;
          ^~~~~~~~~~~
cc1.exe: all warnings being treated as errors
7a77386
Sat, Apr 19, 2025  5:23:21 PM: 
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'eraseMap':
hashmap.c:92:38: error: 'pos' undeclared (first use in this function)
     Pair* hashElement = map->buckets[pos] ;
                                      ^~~
hashmap.c:92:38: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:90:10: error: unused variable 'posOriginal' [-Werror=unused-variable]
     long posOriginal = posicion ;
          ^~~~~~~~~~~
cc1.exe: all warnings being treated as errors
28c2434
Sat, Apr 19, 2025  5:27:45 PM: 
 hashmap.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'eraseMap':
hashmap.c:90:10: error: unused variable 'posOriginal' [-Werror=unused-variable]
     long posOriginal = posicion ;
          ^~~~~~~~~~~
cc1.exe: all warnings being treated as errors
3e65c35
Sat, Apr 19, 2025  5:28:06 PM: 
 hashmap.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
 tests:  8|3
total_score: 40/70
68bd9a8
Sat, Apr 19, 2025  5:29:50 PM: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  8|3
total_score: 40/70
a951498
Sat, Apr 19, 2025  5:30:02 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|3
total_score: 40/70
0291472
Sat, Apr 19, 2025  5:42:52 PM: 
 hashmap.c | 20 ++++++++++++++++++--
 1 file changed, 18 insertions(+), 2 deletions(-)
 tests:  11|2
total_score: 50/70
f851952
Sat, Apr 19, 2025  5:49:54 PM: 
 hashmap.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
 tests:  13|2
total_score: 50/70
d94bf97
Sat, Apr 19, 2025  5:50:42 PM: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  13|2
total_score: 50/70
db38b8c
Sat, Apr 19, 2025  5:54:34 PM: 
 hashmap.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
 tests:  15|2
total_score: 50/70
9f8ceab
Sat, Apr 19, 2025  5:57:36 PM: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  15|2
total_score: 50/70
ed38ea7
Sat, Apr 19, 2025  6:06:06 PM: 
 hashmap.c | 21 +++++++++++++++++++--
 1 file changed, 19 insertions(+), 2 deletions(-)
 tests:  16|1
total_score: 60/70
7565afb
Sat, Apr 19, 2025  6:10:40 PM: 
 hashmap.c | 15 ++++++---------
 1 file changed, 6 insertions(+), 9 deletions(-)
 tests:  16|1
total_score: 60/70
98cc164
Sat, Apr 19, 2025  6:16:03 PM: 
 hashmap.c | 17 ++++++++++++++---
 1 file changed, 14 insertions(+), 3 deletions(-)
 tests:  16|1
total_score: 60/70
ef210d3
